[package]
name = "rust_game_networking"
version = "0.1.0"
edition = "2021"

[features]
default = []
serialize_check = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
byteorder = "1.4.3"

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.79"

[dev-dependencies]
ctrlc = "3.2.5"
env_logger = "0.10.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
